# Pike

./: .gitignore  README.md  pyproject.toml
docs/: conf.py  index.rst
docs/modules/: config.rst  design.rst  usage.rst
docs/modules/references/: checks.rst  custom_commands.rst  docx.rst  engine.rst  file.rst  injections.rst  tables.rst  utility.rst
example_report/: data.csv  jinja.md  main.py  markdown.md  testing.md  title_page.md
example_report/configuration/: config.json  layout.md  variables.json
example_report/content/: one.md  two.md
pike/: __init__.py  __main__.py  engine.py  file.py  jinja_globals.py
pike/checks/: __init__.py  required_files.py
pike/default_files/: config.json
pike/docx/: __init__.py  ast_util.py  commands.py  docx.py  structs.py
pike/injections/: __init__.py  insert_file_as_code.py  raise_on_todo.py  raise_on_xxx.py
pike/structs/: __init__.py  config.py  table.py
pike/utils/: __init__.py  files.py  markdown_it.py
tests/: conftest.py  test_ast.py  test_ast_list_metadata.py  test_base_enum.py  test_custom_commands.py  test_engine.py  test_file.py  test_jinja.py  test_table_util.py  test_to_ast.py  test_walk_ast.py
tests/data/: bold_title.md  custom_command.md  image.md  line_break.md  multi_ordered_list.md  nested_blockquote.md  normal_link.md  ordered_lists.md  sized_image.md  table.csv  table.md  table_alignment.md  table_command.md  table_formatting.md  table_no_header.md  titled_link.md
tests/example_report/: main.py
tests/example_report/configuration/: config.json
(+2 files in other folders)
