[project]
name = "pike"
version = "0.1.0"
description = "An easy to use reporting engine for generic use cases."
authors = [{ name = "skelmis", email = "skelmis.craft@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "jinja2>=3.1.4",
    "markdown-it-py>=3.0.0,<4",
    "python-frontmatter>=1.1.0,<2",
    "typer>=0.16.0",
    "skelmis-commons>=1.6.1",
    "skelmis-docx>=2.2.2",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.0",
]
docs = [
    "sphinx>=8.0.2,<9",
    "furo>=2024.8.6,<2025",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
